{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 11,
  "lineage": "5c84ecab-2ac0-a732-7827-f4927ed9615e",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411453012264:internet-gateway/igw-00452084ee8332da5",
            "id": "igw-00452084ee8332da5",
            "owner_id": "411453012264",
            "tags": {
              "Name": "k8s-demo-internet-gateway"
            },
            "tags_all": {
              "Name": "k8s-demo-internet-gateway"
            },
            "vpc_id": "vpc-03d0f7a08223f1e2d"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00452084ee8332da5",
            "id": "r-rtb-0a6bd17695c917aa51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a6bd17695c917aa5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411453012264:route-table/rtb-0a6bd17695c917aa5",
            "id": "rtb-0a6bd17695c917aa5",
            "owner_id": "411453012264",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-demo-public-route"
            },
            "tags_all": {
              "Name": "k8s-demo-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d0f7a08223f1e2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0675079f3b35cc8ec",
            "route_table_id": "rtb-0a6bd17695c917aa5",
            "subnet_id": "subnet-09b0560459de22c6f"
          },
          "dependencies": [
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e405dc87d8c3f3c",
            "route_table_id": "rtb-0a6bd17695c917aa5",
            "subnet_id": "subnet-06b5c6b8b0a95ba1d"
          },
          "dependencies": [
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_1c",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411453012264:subnet/subnet-06345b3d360f08ae0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06345b3d360f08ae0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411453012264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-private-1a"
            },
            "tags_all": {
              "Name": "k8s-demo-private-1a"
            },
            "vpc_id": "vpc-03d0f7a08223f1e2d"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411453012264:subnet/subnet-0d0237df92b71e455",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0237df92b71e455",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411453012264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-private-1c"
            },
            "tags_all": {
              "Name": "k8s-demo-private-1c"
            },
            "vpc_id": "vpc-03d0f7a08223f1e2d"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411453012264:subnet/subnet-09b0560459de22c6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b0560459de22c6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "411453012264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-public-1a"
            },
            "tags_all": {
              "Name": "k8s-demo-public-1a"
            },
            "vpc_id": "vpc-03d0f7a08223f1e2d"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411453012264:subnet/subnet-06b5c6b8b0a95ba1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b5c6b8b0a95ba1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "411453012264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-public-1c"
            },
            "tags_all": {
              "Name": "k8s-demo-public-1c"
            },
            "vpc_id": "vpc-03d0f7a08223f1e2d"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411453012264:vpc/vpc-03d0f7a08223f1e2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cca0412c8eb197b6",
            "default_route_table_id": "rtb-0108429c03bce0e1f",
            "default_security_group_id": "sg-0250fa7898986e808",
            "dhcp_options_id": "dopt-0fcbe8af6315ea51f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03d0f7a08223f1e2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0108429c03bce0e1f",
            "owner_id": "411453012264",
            "tags": {
              "Name": "k8s-demo-vpc"
            },
            "tags_all": {
              "Name": "k8s-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}